k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kleva-frontend
  namespace: kleva
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kleva-frontend
  template:
    metadata:
      labels:
        app: kleva-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/marcoantonio1999/kleva-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
