k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kleva-frontend
  namespace: kleva
spec:
  selector:
    app: kleva-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
